--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <!-- Title And fav icone -->
     <title>Sandeep</title>
     <link rel="icon" type="image/x-icon" href="images/Dr_Sandeep_Goel.jpg">
+
+    <!-- HTML Meta Tags -->
+    <title>Sandeep</title>
+    <meta name="description" content="SANDEEP SIR: UNLOCKING THE GATEWAY FROM CLASSROOM TO BRILLIANCE">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://taxmanager-bittu.github.io/sandeep/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Sandeep">
+    <meta property="og:description" content="SANDEEP SIR: UNLOCKING THE GATEWAY FROM CLASSROOM TO BRILLIANCE">
+    <meta property="og:image" content="https://taxmanager-bittu.github.io/sandeep/images/Dr_Sandeep_Goel.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="taxmanager-bittu.github.io">
+    <meta property="twitter:url" content="https://taxmanager-bittu.github.io/sandeep/">
+    <meta name="twitter:title" content="Sandeep">
+    <meta name="twitter:description" content="SANDEEP SIR: UNLOCKING THE GATEWAY FROM CLASSROOM TO BRILLIANCE">
+    <meta name="twitter:image" content="https://taxmanager-bittu.github.io/sandeep/images/Dr_Sandeep_Goel.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <!-- Stylesheet File -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
