--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title And fav icone -->
-    <title>SANDEEP SIR wants to share his journey from classroom to brilliance. Follow him as he shares the tips and tricks he learned during his climb to success!</title>
+    <title>SANDEEP SIR wants to share his journey from classroom to brilliance. </title>
     <link rel="icon" type="image/x-icon" href="images/Dr_Sandeep_Goel.jpg">
     <meta name="description" content="Unknown to many, studying managerial accounting under the guidance of Sandeep Sir can easily turn your career around for the better. With his help, you'll learn the ins and outs of this complex field in a matter of weeks!">
     <meta name="keywords" content="Unknown to many, studying managerial accounting under the guidance of Sandeep Sir can easily turn your career around for the better. With his help, ">
