--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="imagesprofil">
-                <!-- <img src="images/Dr_Sandeep_Goel.jpg" alt="Dr Sandeep Goel" title="Dr Sandeep Goel">  -->
+                <img src="images/Dr_Sandeep_Goel.jpg" alt="Dr Sandeep Goel" title="Dr Sandeep Goel">
             </div>
         </div>
     </div>
